test/errhandling/psahabu/propagate-implicit.good
calling propError
propagate-implicit.chpl:9: error: uncaught error
